--- a/style/pocket-kitten.css
+++ b/style/pocket-kitten.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 10px;
-  font-family: "Georgia", serif;
+  font-family: "FiraSans", "Georgia", serif;
   line-height: 0.5;
   overflow: hidden;
   
@@ -68,7 +68,6 @@ header {
 h1 {
   font-weight: normal;
   font-size: 24px;
-  font-style: italic;
   text-shadow: 2px 2px 2px black;
 }
 
