--- a/style/pocket-kitten.css
+++ b/style/pocket-kitten.css
@@ -137,7 +137,7 @@ header button:hover, header button:active {
   width: 300px;
   overflow: hidden;
   position: relative;
-  background:transparent url('images/fetching.gif') no-repeat left top;
+  background:transparent url('images/fetching.png') no-repeat left top;
   border-radius: 10px;
   box-shadow:
     0px 0px 1px 4px rgba(219,219,219,1),
